--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "mongoose": "^6.2.2",
     "nodemon": "^2.0.22"
